src/objects/LeanData__Account_Account_Match__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account1_Id__c</fullName>
        <label>Account1 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Account2_Id__c</fullName>
        <label>Account2 Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Request_Id__c</fullName>
        <label>Request Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Account Match</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Account Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Account Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>